--- a/6. NodeJS - Simple Rest API/.env
+++ b/6. NodeJS - Simple Rest API/.env
@@ -1,2 +1,2 @@
 PORT=8080
-MONGODB=mongodb+srv://nodejslabsist:aHgk0hQ6IZS15S2u@cluster0.rumkh.mongodb.net/?retryWrites=true&w=majority
+MONGODB=your_mongodb_url
